# fastqe

./: .gitignore  Abstract__.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.txt  MANIFEST.in  Makefile  README.md  environment.yml  fastqe.py  layout.md  meta.md  paper.bib  paper.md  pyproject.toml  setup.py  title.md  untitled.md
.github/workflows/: pytest.yml  python-app.yml  python-publish.yml  ruff.yml
docs/: CNAME  index.html
fastqe/: fastqe.py  fastqe_map.py
fastqe/templates/: .index.html.swp  index.html
src/: lib.rs
src/fastqe/: fastqe.py  fastqe_map.py
src/fastqe/utils/: logs.py
test/: test.fastq  test_dict.txt  test_short_seq.fq  test_wiki.fq
tests/: test_fastqe.py
